# wasm-compilation-time

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  run.sh  singlepass.txt
output/: compare.R  compare.sh  cosmwasm-singlepass-err.txt  cosmwasm-singlepass.txt  stats.R  stats.sh  stats.txt  wasmer-cranelift-none.txt  wasmer-cranelift-speed.txt  wasmer-singlepass.txt  wasmtime-cranelift-none.txt  wasmtime-cranelift-speed.txt  wasmtime-singlepass.txt  wasmtime-winch.txt
results/: average.R  average.sh  both.sh  compare.sh  correlation.sh  cranelift.txt  difference.sh  loess.sh  singlepass.txt  stats.R  stats.sh  stats.txt  wasmer-cranelift-none.txt  wasmer-cranelift-speed.txt  wasmer-singlepass.txt  wasmtime-cranelift-none.txt  wasmtime-cranelift-speed.txt  wasmtime-singlepass.txt
scripts/: count.sh  download.sh
src/: main.rs
